--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My GitHub Pages Site</title>
+  <link rel="stylesheet" href="style/styles.css">
+</head>
+<body>
+  <!-- Header Section -->
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
+  <!-- Main Content Section -->
+  <main>
+    <section class="hero">
+      <h1>Welcome to My Website</h1>
+      <p>This is a simple website hosted on GitHub Pages.</p>
+      <a href="#" class="button">Learn More</a>
+    </section>
+
+    <section class="content">
+      <h2>About Us</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vel dolor at augue egestas tristique non at sapien. Donec at arcu sapien.</p>
+    </section>
+  </main>
+
+  <!-- Footer Section -->
+  <footer>
+    <p>&copy; 2024 My GitHub Pages Site. All rights reserved.</p>
+  </footer>
+</body>
+</html>
