--- a/index.html
+++ b/index.html
@@ -23,13 +23,21 @@
   <!-- Main Content Section -->
   <main>
     <section class="hero">
-      <h1>Welcome to My Website</h1>
-      <p>This is a simple website hosted on GitHub Pages.</p>
-      <a href="#" class="button">Learn More</a>
+      <div class="profile">
+        <!-- Replace 'your-photo.jpg' with the path to your profile photo -->
+        <img src="your-photo.jpg" alt="Your Name" class="profile-photo">
+        <h1>Your Name</h1>
+        <p>Welcome to my personal website! I am a web developer, designer, and technology enthusiast.</p>
+        <div class="social-links">
+          <!-- Replace # with your actual LinkedIn and GitHub URLs -->
+          <a href="https://www.linkedin.com/in/your-profile" target="_blank">LinkedIn</a> |
+          <a href="https://github.com/your-username" target="_blank">GitHub</a>
+        </div>
+      </div>
     </section>
 
     <section class="content">
-      <h2>About Us</h2>
+      <h2>About Me</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vel dolor at augue egestas tristique non at sapien. Donec at arcu sapien.</p>
     </section>
   </main>
