--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#">Research</a></li>
+        <li><a href="#">Outreach</a></li>
+        <li><a href="#">CV</a></li>
       </ul>
     </nav>
   </header>
@@ -30,15 +30,15 @@
         <p>Welcome to my personal website! I am a web developer, designer, and technology enthusiast.</p>
         <div class="social-links">
           <!-- Replace # with your actual LinkedIn and GitHub URLs -->
-          <a href="https://www.linkedin.com/in/your-profile" target="_blank">LinkedIn</a> |
-          <a href="https://github.com/your-username" target="_blank">GitHub</a>
+          <a href="https://www.linkedin.com/in/nisha-grewal-386644a5/" target="_blank">LinkedIn</a> |
+          <a href="https://github.com/nishagrewal?tab=repositories" target="_blank">GitHub</a>
         </div>
       </div>
     </section>
 
     <section class="content">
       <h2>About Me</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vel dolor at augue egestas tristique non at sapien. Donec at arcu sapien.</p>
+      <p>I am a PhD student at the University of Edinburgh, supervised by Dr Joe Zuntz. My research centers on how to leverage statistics for weak lensing to learn more about the dark sector.</p>
     </section>
   </main>
 
