--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
     <section class="hero">
       <div class="profile">
         <!-- Replace 'your-photo.jpg' with the path to your profile photo -->
-        <img src="your-photo.jpg" alt="Your Name" class="profile-photo">
-        <h1>Your Name</h1>
-        <p>Welcome to my personal website! I am a web developer, designer, and technology enthusiast.</p>
+        <img src="blackfordhill.jpg" alt="Your Name" class="profile-photo">
+        <h1>Nisha Grewal</h1>
+        <p>PhD Student</p>
+        <p>Institute for Astronomy</p>
+        <p>University of Edinburgh</p>
         <div class="social-links">
-          <!-- Replace # with your actual LinkedIn and GitHub URLs -->
           <a href="https://www.linkedin.com/in/nisha-grewal-386644a5/" target="_blank">LinkedIn</a> |
           <a href="https://github.com/nishagrewal?tab=repositories" target="_blank">GitHub</a>
         </div>
