--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       background-image: url('blackfordhill.JPG'); /* Background image */
       background-size: cover;
       background-position: center;
-      height: 400px; /* Adjust the height as needed */
+      height: 700px; /* Adjust the height as needed */
       display: flex;
       align-items: center;
       justify-content: left;
@@ -106,24 +106,30 @@
       <h2>About Me</h2>
       <p>I am a PhD student at the University of Edinburgh, supervised by Dr Joe Zuntz. My research centers on how to leverage statistics for weak lensing to learn more about the dark sector.</p>
     </section>
+  </main>
 
       <!-- Research Section -->
+  <main>
     <section id="research">
       <h2>Research</h2>
       <p>Cosmology studies the evolution and characteristics of the Universe. To better understand the history of the dark sector, we use galaxy catalogs and maps to constrain cosmological parameters that describe dark matter and dark energy. Statistics measured from gravitational lensing (the bending of light around large masses) are effective in probing the growth of large-scale structure and the accelerated expansion of the Universe. In my research, I evaluate different types of statistics to build a cohesive model that can eventually be measured from the Legacy Survey in Space and Time’s upcoming powerful data set.</p>
       <p>My research focuses on the applications of higher-order statistics (HoS) in weak lensing cosmology. I am a member of the Legacy Survey in Space and Time (LSST) Dark Energy Science Collaboration (DESC).</p>
       <p>Statistics measured from gravitational lensing have been effective in probing the growth of large-scale structure and the behaviour of gravity on cosmological scales, revealing insights into the unknown dark matter and dark energy. In particular, higher-order statistics (HoS) offer a powerful means to probe non-Gaussian features in the large-scale structure of the universe, capturing information that is inaccessible to traditional 2pt statistics. </p>
     </section>
+  </main>
 
     <!-- Outreach Section -->
+  <main>
     <section id="outreach">
       <h2>Outreach</h2>
       <p>Student Ambassador, James Clerk Maxwell Foundation</p>
       <p>Seeing the Dark Universe, Edinburgh Pint of Science</p>
       <p>Scotland's Einstein, Edinburgh Science Festival</p>
     </section>
+  </main>
 
     <!-- CV Section -->
+  <main>
     <section id="cv">
       <h2>Curriculum Vitae</h2>
       <p>A link to your CV or more detailed professional information can go here.</p>
