--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       background-image: url('blackfordhill.JPG'); /* Background image */
       background-size: cover;
       background-position: center;
-      height: 700px; /* Adjust the height as needed */
+      height: 400px; /* Adjust the height as needed */
       display: flex;
       align-items: center;
       justify-content: left;
@@ -132,7 +132,7 @@
   <main>
     <section id="cv">
       <h2>Curriculum Vitae</h2>
-      <p>A link to your CV or more detailed professional information can go here.</p>
+      <iframe src="NG_CV.pdf" style="width:100%; height:600px; border:none;"></iframe>
     </section>
   </main>
 
