--- a/index.html
+++ b/index.html
@@ -80,13 +80,14 @@
   <header>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Research</a></li>
-        <li><a href="#">Outreach</a></li>
-        <li><a href="#">CV</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="research.html">Research</a></li>
+        <li><a href="outreach.html">Outreach</a></li>
+        <li><a href="cv.html">CV</a></li>
       </ul>
     </nav>
   </header>
+
 
   <!-- Main Content Section -->
   <main>
