--- a/research.html
+++ b/research.html
@@ -24,9 +24,7 @@
   <main>
     <section id="research">
       <h2>Research</h2>
-      <p>Cosmology studies the evolution and characteristics of the Universe. To better understand the history of the dark sector, we use galaxy catalogs and maps to constrain cosmological parameters that describe dark matter and dark energy. Statistics measured from gravitational lensing (the bending of light around large masses) are effective in probing the growth of large-scale structure and the accelerated expansion of the Universe. In my research, I evaluate different types of statistics to build a cohesive model that can eventually be measured from the Legacy Survey in Space and Time’s upcoming powerful data set.</p>
-      <p>My research focuses on the applications of higher-order statistics (HoS) in weak lensing cosmology. I am a member of the Legacy Survey in Space and Time (LSST) Dark Energy Science Collaboration (DESC).</p>
-      <p>Statistics measured from gravitational lensing have been effective in probing the growth of large-scale structure and the behaviour of gravity on cosmological scales, revealing insights into the unknown dark matter and dark energy. In particular, higher-order statistics (HoS) offer a powerful means to probe non-Gaussian features in the large-scale structure of the universe, capturing information that is inaccessible to traditional 2pt statistics. </p>
+      <p>Cosmology studies the evolution and characteristics of the Universe. To better understand the history of the dark sector, we measure statistics from galaxy catalogs and maps to constrain cosmological parameters that describe dark matter and dark energy. Statistics measured from gravitational lensing (the bending of light around large masses) are effective in probing the growth of large-scale structure and the accelerated expansion of the Universe. In my research, I evaluate different types of statistics to build a cohesive model that can eventually be measured from the Legacy Survey in Space and Time’s upcoming powerful data set.</p>
     </section>
   </main>
 
