--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
     <section class="content">
       <h2>About Me</h2>
-      <p>I am a PhD student at the University of Edinburgh, supervised by Dr Joe Zuntz. My research centers on how to leverage statistics for weak lensing to learn more about the dark sector.</p>
+      <p>I am a PhD student at the University of Edinburgh, supervised by Dr Joe Zuntz. My research centers on the applications of higher-order statistics (HoS) in weak lensing cosmology. I am a member of the Legacy Survey in Space and Time (LSST) Dark Energy Science Collaboration (DESC).</p>
     </section>
   </main>
 
