--- a/outreach.html
+++ b/outreach.html
@@ -24,6 +24,7 @@
   <main>
     <section id="outreach">
       <h2>Outreach</h2>
+      <img src="jcm_ta.jpeg" alt="Outreach Activities" style="width:100%; height:auto; margin-bottom: 20px;">
       <p>Student Ambassador, James Clerk Maxwell Foundation</p>
       <p>Seeing the Dark Universe, Edinburgh Pint of Science</p>
       <p>Scotland's Einstein, Edinburgh Science Festival</p>
