--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     }
 
     header {
-      background-color: #333;
+      background-color: #007bff; /* Nice blue color */
       padding: 10px;
     }
 
@@ -51,7 +51,7 @@
 
     .profile {
       max-width: 400px; /* Adjust the width of the text box */
-      background-color: rgba(0, 0, 0, 0.6); /* Semi-transparent background for readability */
+      background-color: rgba(0, 123, 255, 0.6); /* Semi-transparent background for readability */
       padding: 20px; /* Padding for the text content */
       border-radius: 10px; /* Rounded corners for aesthetics */
     }
