--- a/index.html
+++ b/index.html
@@ -89,25 +89,31 @@
   </header>
 
 
-  <!-- Main Content Section -->
-  <main>
-    <section class="hero">
-      <div class="profile">
-        <h1>Nisha Grewal</h1>
-        <p>Institute for Astronomy</p>
-        <p>University of Edinburgh</p>
-        <div class="social-links">
-          <a href="https://www.linkedin.com/in/nisha-grewal-386644a5/" target="_blank">LinkedIn</a> |
-          <a href="https://github.com/nishagrewal?tab=repositories" target="_blank">GitHub</a>
-        </div>
+<!-- Main Content Section -->
+<main>
+  <section class="hero">
+    <div class="profile">
+      <h1>Nisha Grewal</h1>
+      <p>Institute for Astronomy</p>
+      <p>University of Edinburgh</p>
+      <div class="social-links">
+        <a href="https://www.linkedin.com/in/nisha-grewal-386644a5/" target="_blank">LinkedIn</a> |
+        <a href="https://github.com/nishagrewal?tab=repositories" target="_blank">GitHub</a>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section class="content">
+  <section class="about">
+    <div class="about-text">
       <h2>About Me</h2>
       <p>I am a PhD student at the University of Edinburgh, supervised by Dr Joe Zuntz. My research centers on the applications of higher-order statistics (HoS) in weak lensing cosmology. I am a member of the Legacy Survey in Space and Time (LSST) Dark Energy Science Collaboration (DESC).</p>
-    </section>
-  </main>
+    </div>
+    <div class="about-image">
+      <img src="yosemite.jpeg" alt="Yosemite National Park" />
+    </div>
+  </section>
+</main>
+
 
 
   <!-- Footer Section -->
