--- a/research.html
+++ b/research.html
@@ -34,6 +34,7 @@
         </div>
         <div class="paper-images">
           <img src="contour_m_legend.png" alt="Image related to research 1">
+          <figcaption>Grewal et al 2022</figcaption>
         </div>
       </div>
 
@@ -45,6 +46,7 @@
         </div>
         <div class="paper-images">
           <img src="recon_maps_noise.png" alt="Image related to research 2">
+          <figcaption>Grewal et al 2024</figcaption>
         </div>
       </div>
 
