--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       background-image: url('blackfordhill.JPG'); /* Background image */
       background-size: cover;
       background-position: center;
-      height: 300px; /* Adjust the height as needed */
+      height: 350px; /* Adjust the height as needed */
       display: flex;
       align-items: center;
       justify-content: left;
@@ -94,8 +94,7 @@
   <section class="hero">
     <div class="profile">
       <h1>Nisha Grewal</h1>
-      <p>Institute for Astronomy</p>
-      <p>University of Edinburgh</p>
+      <p>nishagrewal314@gmail.com</p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/nisha-grewal-386644a5/" target="_blank">LinkedIn</a> |
         <a href="https://github.com/nishagrewal?tab=repositories" target="_blank">GitHub</a>
@@ -104,12 +103,13 @@
   </section>
 
   <section class="about">
-    <div class="about-text">
-      <h2>About Me</h2>
-      <p>I am a PhD student at the University of Edinburgh, supervised by Dr Joe Zuntz. My research centers on the applications of higher-order statistics (HoS) in weak lensing cosmology. I am a member of the Legacy Survey in Space and Time (LSST) Dark Energy Science Collaboration (DESC).</p>
-    </div>
     <div class="about-image">
       <img src="yosemite.jpeg" alt="Yosemite National Park" />
+    </div>
+    <div class="about-text">
+      <h2>About Me</h2>
+      <p>I am a PhD student at the University of Edinburgh, supervised by Dr Joe Zuntz. My research centers on the applications of higher-order statistics (HoS) in weak lensing cosmology. I am interested in studying the systematics and constraining power of higher-order statistics to explore non-Gaussianity in large-scale structure of the Universe. I am an active member of the LSST Dark Energy Science Collaboration.</p>
+      <p>I am currently on the job market, looking for exciting new opportunities in weak lensing and AI. Feel free to get in touch!</p>
     </div>
   </section>
 </main>
