--- a/outreach.html
+++ b/outreach.html
@@ -21,15 +21,19 @@
   </header>
 
     <!-- Outreach Section -->
-  <main>
-    <section id="outreach">
+<main>
+  <section id="outreach" class="outreach">
+    <div class="outreach-image">
+      <img src="jcm_ta.jpeg" alt="Outreach Activities" />
+    </div>
+    <div class="outreach-text">
       <h2>Outreach</h2>
-      <img src="jcm_ta.jpeg" alt="Outreach Activities" style="width:40%; height:auto; margin-bottom: 20px;">
       <p>Student Ambassador, James Clerk Maxwell Foundation</p>
       <p>Seeing the Dark Universe, Edinburgh Pint of Science</p>
       <p>Scotland's Einstein, Edinburgh Science Festival</p>
-    </section>
-  </main>
+    </div>
+  </section>
+</main>
 
   <!-- Footer Section -->
   <footer>
